
syntax = "proto3";

package auth;
option go_package = "internal/grpc/auth; authpb";

import "pkg/google/api/annotations.proto";

// A simple authentication service.
service AuthService {

  // Takes user input to generate a token.
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post : "/v1/auth/login"
      body : "*"
    };
  }
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse { string access_token = 1; }
